--- a/src/main/webapp/WEB-INF/views/error_404b.html
+++ b/src/main/webapp/WEB-INF/views/error_404b.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<h1>Computer not found</h1>
+<h1>Computer Code is Exist, Please try again</h1>
+<a href="/create">Back to create</a>
 </body>
 </html>
